[package]
name = "donut_planet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
sqlx = { version = "0.6.2", features=["runtime-actix-rustls", "mysql", "macros", "chrono"] }
anyhow = "1.0.65"
serde_json = "1.0.86"
serde = { version = "1.0.145", features = ["derive"] }
bcrypt = "0.13.0"
thiserror = "1.0.37"
jsonwebtoken = "8.1.1"
futures = "0.3.25"
env_logger = "0.9.1"
chrono = { version = "0.4.22", features = ["serde"]}

[profile.dev.package.sqlx-macros]
opt-level = 3